--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "homepage": "https://github.com/Njunge11/react-live-search#readme",
   "dependencies": {
+    "axios": "^0.19.0",
+    "dotenv": "^8.1.0",
     "next": "^9.0.7",
     "react": "^16.10.1",
     "react-dom": "^16.10.1"
